--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -181,7 +181,6 @@ allow 172.105.161.162;
 allow 172.233.82.41;
 allow 172.234.228.174;
 allow 172.81.131.110;
-allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
@@ -263,6 +262,7 @@ allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
 allow 185.132.53.47;
+allow 185.132.53.52;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
@@ -785,6 +785,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 209.126.86.139;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -890,6 +891,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -912,6 +914,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
