--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -225,49 +225,9 @@ allow 2607:5300:61:785::;
 allow 2607:5300:61:785:1:2:3:4;
 allow 2607:f130:0:ed:216:3cff:febd:3b42;
 allow 2607:f530:8002::19;
-allow 2620:18c:0:192::131;
-allow 2620:18c:0:192::132;
-allow 2620:18c:0:192::133;
-allow 2620:18c:0:192::134;
-allow 2620:18c:0:192::135;
-allow 2620:18c:0:192::136;
-allow 2620:18c:0:192::137;
-allow 2620:18c:0:192::138;
-allow 2620:18c:0:192::139;
-allow 2620:18c:0:192::140;
-allow 2620:18c:0:192::141;
-allow 2620:18c:0:192::142;
-allow 2620:18c:0:192::143;
-allow 2620:18c:0:192::144;
-allow 2620:18c:0:192::145;
-allow 2620:18c:0:192::146;
-allow 2620:18c:0:192::147;
-allow 2620:18c:0:192::148;
-allow 2620:18c:0:192::149;
-allow 2620:18c:0:192::150;
 allow 2620:18c:0:192::171;
 allow 2620:18c:0:192::172;
 allow 2620:18c:0:192::173;
-allow 2620:18c:0:192::211;
-allow 2620:18c:0:192::212;
-allow 2620:18c:0:192::213;
-allow 2620:18c:0:192::214;
-allow 2620:18c:0:192::215;
-allow 2620:18c:0:192::216;
-allow 2620:18c:0:192::217;
-allow 2620:18c:0:192::218;
-allow 2620:18c:0:192::219;
-allow 2620:18c:0:192::220;
-allow 2620:18c:0:192::221;
-allow 2620:18c:0:192::222;
-allow 2620:18c:0:192::223;
-allow 2620:18c:0:192::224;
-allow 2620:18c:0:192::225;
-allow 2620:18c:0:192::226;
-allow 2620:18c:0:192::227;
-allow 2620:18c:0:192::228;
-allow 2620:18c:0:192::229;
-allow 2620:18c:0:192::230;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
@@ -293,6 +253,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -314,7 +275,6 @@ allow 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
-allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
