--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -269,7 +269,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -809,49 +808,9 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.79.189.239;
-set_real_ip_from 23.129.64.131;
-set_real_ip_from 23.129.64.132;
-set_real_ip_from 23.129.64.133;
-set_real_ip_from 23.129.64.134;
-set_real_ip_from 23.129.64.135;
-set_real_ip_from 23.129.64.136;
-set_real_ip_from 23.129.64.137;
-set_real_ip_from 23.129.64.138;
-set_real_ip_from 23.129.64.139;
-set_real_ip_from 23.129.64.140;
-set_real_ip_from 23.129.64.141;
-set_real_ip_from 23.129.64.142;
-set_real_ip_from 23.129.64.143;
-set_real_ip_from 23.129.64.144;
-set_real_ip_from 23.129.64.145;
-set_real_ip_from 23.129.64.146;
-set_real_ip_from 23.129.64.147;
-set_real_ip_from 23.129.64.148;
-set_real_ip_from 23.129.64.149;
-set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.171;
 set_real_ip_from 23.129.64.172;
 set_real_ip_from 23.129.64.173;
-set_real_ip_from 23.129.64.211;
-set_real_ip_from 23.129.64.212;
-set_real_ip_from 23.129.64.213;
-set_real_ip_from 23.129.64.214;
-set_real_ip_from 23.129.64.215;
-set_real_ip_from 23.129.64.216;
-set_real_ip_from 23.129.64.217;
-set_real_ip_from 23.129.64.218;
-set_real_ip_from 23.129.64.219;
-set_real_ip_from 23.129.64.220;
-set_real_ip_from 23.129.64.221;
-set_real_ip_from 23.129.64.222;
-set_real_ip_from 23.129.64.223;
-set_real_ip_from 23.129.64.224;
-set_real_ip_from 23.129.64.225;
-set_real_ip_from 23.129.64.226;
-set_real_ip_from 23.129.64.227;
-set_real_ip_from 23.129.64.228;
-set_real_ip_from 23.129.64.229;
-set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -1016,49 +975,9 @@ set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
-set_real_ip_from 2620:18c:0:192::131;
-set_real_ip_from 2620:18c:0:192::132;
-set_real_ip_from 2620:18c:0:192::133;
-set_real_ip_from 2620:18c:0:192::134;
-set_real_ip_from 2620:18c:0:192::135;
-set_real_ip_from 2620:18c:0:192::136;
-set_real_ip_from 2620:18c:0:192::137;
-set_real_ip_from 2620:18c:0:192::138;
-set_real_ip_from 2620:18c:0:192::139;
-set_real_ip_from 2620:18c:0:192::140;
-set_real_ip_from 2620:18c:0:192::141;
-set_real_ip_from 2620:18c:0:192::142;
-set_real_ip_from 2620:18c:0:192::143;
-set_real_ip_from 2620:18c:0:192::144;
-set_real_ip_from 2620:18c:0:192::145;
-set_real_ip_from 2620:18c:0:192::146;
-set_real_ip_from 2620:18c:0:192::147;
-set_real_ip_from 2620:18c:0:192::148;
-set_real_ip_from 2620:18c:0:192::149;
-set_real_ip_from 2620:18c:0:192::150;
 set_real_ip_from 2620:18c:0:192::171;
 set_real_ip_from 2620:18c:0:192::172;
 set_real_ip_from 2620:18c:0:192::173;
-set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
-set_real_ip_from 2620:18c:0:192::213;
-set_real_ip_from 2620:18c:0:192::214;
-set_real_ip_from 2620:18c:0:192::215;
-set_real_ip_from 2620:18c:0:192::216;
-set_real_ip_from 2620:18c:0:192::217;
-set_real_ip_from 2620:18c:0:192::218;
-set_real_ip_from 2620:18c:0:192::219;
-set_real_ip_from 2620:18c:0:192::220;
-set_real_ip_from 2620:18c:0:192::221;
-set_real_ip_from 2620:18c:0:192::222;
-set_real_ip_from 2620:18c:0:192::223;
-set_real_ip_from 2620:18c:0:192::224;
-set_real_ip_from 2620:18c:0:192::225;
-set_real_ip_from 2620:18c:0:192::226;
-set_real_ip_from 2620:18c:0:192::227;
-set_real_ip_from 2620:18c:0:192::228;
-set_real_ip_from 2620:18c:0:192::229;
-set_real_ip_from 2620:18c:0:192::230;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -1085,6 +1004,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe96:7671;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:2b88:2:48b::1;
 set_real_ip_from 2a02:2b88:2:6ce::1;
 set_real_ip_from 2a02:418:6017::147;
@@ -1106,7 +1026,6 @@ set_real_ip_from 2a03:4000:1e:81:c835:7dff:fe90:3ed5;
 set_real_ip_from 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 set_real_ip_from 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
-set_real_ip_from 2a03:4000:28:1e8::69;
 set_real_ip_from 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 set_real_ip_from 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 set_real_ip_from 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1558,6 +1477,7 @@ set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
 set_real_ip_from 46.165.243.36;
+set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 47.243.99.161;
@@ -1712,7 +1632,6 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
-set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.54;
