--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -267,6 +267,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -506,6 +507,7 @@ set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
+set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
@@ -1504,6 +1506,9 @@ set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
 set_real_ip_from 45.83.21.193;
+set_real_ip_from 45.84.107.182;
+set_real_ip_from 45.84.107.198;
+set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
